--- a/IsTakip.Web/Areas/Admin/Views/Gorev/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Gorev/Index.cshtml
@@ -7,8 +7,7 @@
 
 @if (Model.Count != 0)
 {
-    <a asp-action="EkleGorev" asp-controller="Gorev"
-       class="btn btn-sm btn-info my-2">
+    <a asp-action="EkleGorev"  class="btn btn-sm btn-info my-2">
         <i class="fas fa-plus-circle mr-2"></i> Yeni Görev
     </a>
 
@@ -34,22 +33,23 @@
                     <td>  @item.OlusturulmaTarihi.ToString("D")</td>
                     <td>
                         <a asp-action="GuncelleGorev" asp-route-id="@item.Id"
-                           class="btn btn-warning btn-sm">
-                            <i class="fas fa-pencil-alt mr-2"></i> Düzenle
+                                class="btn btn-warning btn-sm">
+                             <i class="fas fa-pencil-alt mr-2"></i> Düzenle
                         </a>
 
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#silmeEkrani"
+                          <a href="" data-toggle="modal" data-target="#silmeEkrani"
                            data-Id="@item.Id" class="btn btn-danger btn-sm">
+
                             <i class="fas fa-trash-alt mr-2"></i> Sil
                         </a>
 
                     </td>
                 </tr>
             </tbody>
-         }
+        }
 
     </table>
- }
+}
 
 else
 
@@ -66,14 +66,34 @@ else
     </div>
 }
 
-@section Javascript{
+<!-- Modal -->
+<div class="modal fade" id="silmeEkrani" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">UYARI</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Silmek istediğinizden emin misiniz?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Hayır Vazgeç</button>
+                <button id="btnSil" type="button" class="btn btn-primary">Evet Sil</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+
+@section JavaScript{
     <script type="text/javascript">
-
         $(document).ready(function () {
             $("#silmeEkrani").on("show.bs.modal", function (event) {
                 let tetikleyenElement = $(event.relatedTarget);
-                let id = tetikleyenElement.data("Id");
+                let id = tetikleyenElement.data("id");
 
                 $("#btnSil").click(function () {
                     $.ajax({
@@ -81,9 +101,9 @@ else
                         url: "./Gorev/SilGorev",
                         data: { id: id },
                         dataType: "json",
-                        contentType: "application/json; charset= utf-8;",
+                        contentType: "application/json; charset=utf-8;",
                         success: function () {
-                            //alert("İşlem tamamlandı.");
+                            //alert("işlem tamam");
                             window.location.reload();
                         },
                         error: function (error) {
@@ -93,7 +113,6 @@ else
                 });
             })
         });
-
     </script>
 
 }
