--- a/IsTakip.Web/Areas/Admin/Views/IsEmri/Detaylandir.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/IsEmri/Detaylandir.cshtml
@@ -7,11 +7,11 @@
 
 @if (Model.Raporlar.Count > 0)
 {
-    <a asp-action="GetirExcel" asp-route-id="@Model.Id" target="_blank" class="btn btn-info btn-sm mt-2"style="color:white">
-        <i class="fas fa-file-excel mr-2"></i> Excel Görüntüle
+    <a asp-action="GetirExcel" asp-route-id="@Model.Id" target="_blank" 
+       class="btn btn-light my-2 mr-2"><i class="fas fa-file-excel mr-2"></i> Excel
     </a>
-    <a asp-action="GetirPdf" asp-route-id="@Model.Id" target="_blank" class="btn btn-info btn-sm mt-2" style="color:white">
-        <i class="fas fa-file-pdf mr-2"></i> PDF Görüntüle
+    <a asp-action="GetirPdf" asp-route-id="@Model.Id" target="_blank" 
+       class="btn btn-light my-2 mr-2"><i class="fas fa-file-pdf mr-2"></i> Pdf
     </a>
 
     <table class="table table-hover text-center table-sm mt-2 table-bordered">
