--- a/IsTakip.Web/Views/Shared/_Layout.cshtml
+++ b/IsTakip.Web/Views/Shared/_Layout.cshtml
@@ -1,31 +1,18 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
 
+<html>
 <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="~/lib/bootswatch/bootstrap.min.css" rel="stylesheet" />
-
-
 </head>
-
 <body>
-
-    <div class="container-fluid">
+    <div>
         @RenderBody()
     </div>
-
-    <!-- Jquery core CSS -->
     <script src="~/lib/jquery/jquery.min.js"></script>
-    <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
-    <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- Bootstrap core CSS -->
-    <script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/lib/jqueryValidate/jquery.validate.min.js"></script>
+    <script src="~/lib/jqueryUnob/jquery.validate.unobtrusive.min.js"></script>
 </body>
-
 </html>
