--- a/IsTakip.Web/Areas/Admin/Views/Profil/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Profil/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model AppUserListViewModel
+﻿
+@model AppUserListViewModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -14,58 +15,54 @@
     </div>
 }
 
-<form asp-action="Index" ectype="multipart/form-data" method="post" class="w-75 mx-auto p-3">
+<form asp-action="Index" method="post" class="w-75 mx-auto p-3" enctype="multipart/form-data">
     <input type="hidden" asp-for="@Model.Id" />
-
     <div class="form-group">
         <label asp-for="@Model.Name"></label>
         <span asp-validation-for="@Model.Name" class="text-danger"></span>
-        <input asp-for="Name" class="form-control" />
+        <input asp-for="@Model.Name" class="form-control" />
     </div>
-
-    <div class="form-group ">
+    <div class="form-group">
         <label asp-for="@Model.SurName"></label>
         <span asp-validation-for="@Model.SurName" class="text-danger"></span>
-        <input asp-for="SurName" class="form-control" />
+        <input asp-for="@Model.SurName" class="form-control" />
     </div>
-
     <div class="form-group">
         <label asp-for="@Model.Email"></label>
         <span asp-validation-for="@Model.Email" class="text-danger"></span>
-        <input asp-for="@Model.Email" class="form-control">
+        <input asp-for="@Model.Email" class="form-control" />
     </div>
-
     <div class="form-group">
         <div class="row">
+            <div class="ml-3">
+                <h6 class="text-left ml-xl-2 mt-3 mb-4">Şu an ki resminiz:</h6>
+                <img src="~/img/@Model.Picture" class="w-auto img-thumbnail mb-4" style="height:10rem!important;" alt="@Model.Name" />
+            </div>
 
+            <div class="col-md-4">
+                <div id="alanOnizleme" style="display:none!important;">
+                    <h6 class="text-left ml-xl-2 mt-3 mb-4">Seçtiğiniz resminiz:</h6>
+                    <img id="resimOnizleme" src="" class="w-auto img-thumbnail mb-4" style="height:10rem!important;" />
+                </div>
+
+            </div>
             <div class="col-md-2">
 
             </div>
-
-            <div class="col-md-4 mt-1">
-                <div class="col-md-8">
-                    <h6 class="text-left">Şu an ki resminiz</h6>
-                    <img src="~/img/@Model.Picture" style="height:10rem!important" alt="@Model.Name" />
-                </div>
-            </div>
-
-            <div class="col-md-8">
-                <div id="alanOnizleme" style="display:none!important">
-                    <h6 class="text-center">Seçtiğiniz resim</h6>
-                    <img id="resimOnizleme" src="" style="height:10rem!important" />
-                </div>
-            </div>
-
-            <div class="col-md-12 mt-1">
-                <input type="file" class="form-control-file" name="resim" id="Resim">
+          
+            <div class="col-md-12">
+                <input type="file" class="form-control-file" style=" border:groove;" name="resim" id="Resim" />
             </div>
         </div>
     </div>
 
     <div class="form-group">
-        <button type="submit" class="btn btn-info btn-sm">
-            <i class="fas fa-thumbs-up mr-2"></i> Kaydet
+
+        <button type="submit" class=" btn btn-info btn-sm mt-2">
+            <i class="fas fa-thumbs-up mr-2"></i>
+            Kaydet
         </button>
+
     </div>
 
 </form>
