--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
@@ -14,7 +14,7 @@
 <div class="border border-right " id="sidebar-wrapper">
     <div class="sidebar-heading">
        
-        <img src="~/img/@Model.Picture" alt="@Model.Name" style="height:10rem!important;" class="w-100 img-thumbnail" />
+        <img src="~/img/@Model.Picture" alt="@Model.Name" style="height:10rem!important;" class="w-auto img-thumbnail" />
 
     </div>
     <div class="list-group list-group-flush">
