--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
@@ -1,1 +1,45 @@
-﻿<h4>Member</h4>
+﻿@model AppUserListViewModel
+
+@{
+    string active = string.Empty;
+    if (TempData["Active"] != null)
+    {
+        active = TempData["Active"].ToString();
+    }
+
+    //string active2 = TempData["Active"]?.ToString();
+}
+
+
+<div class="border border-right " id="sidebar-wrapper">
+    <div class="sidebar-heading">
+
+        <img src="~/img/@Model.Picture" alt="@Model.Name" style="height:10rem!important;" class="w-auto img-thumbnail" />
+
+    </div>
+    <div class="list-group list-group-flush">
+     
+        <a href="#" class="list-group-item list-group-item-action">
+            <i class="fas fa-envelope-open-text mr-2"></i>
+            Gelen İş Emirleri
+        </a>
+        <a href="#" class="list-group-item list-group-item-action ">
+            <i class="fas fa-clipboard-check mr-2"></i>
+             Tamamladığım İşler
+        </a>
+
+        <a href="#" class="list-group-item list-group-item-action ">
+            <i class="fas fa-bell mr-2"></i>
+            Bildirimler
+        </a>
+
+        <a asp-action="Index" asp-controller="Profil" class="list-group-item list-group-item-action @(active=="profil"?"active":"")">
+            <i class="fas fa-user mr-2"></i>
+            Profilim
+        </a>
+        <a asp-area="" asp-action="CikisYap" asp-controller="Home" class="list-group-item list-group-item-action ">
+            <i class="fas fa-sign-out-alt mr-2"></i>
+            Çıkış Yap
+        </a>
+    </div>
+</div>
