--- a/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
@@ -44,18 +44,22 @@
             </p>
             <div class="collapse" id="collapseExample-@index">
                 <table class="table table-hover table-bordered table-sm">
-                    <tr>
-                        <th>Tanım</th>
-                        <th>Detay</th>
-                        <th>İşlem</th>
+                    <thead class="table table-striped table-active">
+                        <tr>
+                            <th scope="col">Tanım</th>
+                            <th scope="col">Detay</th>
+                            <th scope="col">İşlem</th>
                     </tr>
+                    </thead>
                     @foreach (var rapor in gorev.Raporlar)
                     {
                         <tr>
                             <td>@rapor.Tanim</td>
                             <td>@rapor.Detay</td>
-                            <td> <a href="">Düzenle</a> </td>
-                           
+                            <td class="btn btn-warning btn-sm mr-2">
+                                <i class="fas fa-pencil-alt mr-2"></i> Düzenle
+                            </td>
+
                         </tr>
                     }
                 </table>
