--- a/IsTakip.Web/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
     <div class="form-check">
         <input type="checkbox" asp-for="RememberMe" class="form-check-input" />
         <label asp-for="RememberMe" class="form-check-label"></label>
-        @*<span asp-validation-for="RememberMe" class="text-danger"></span>*@
+        <span asp-validation-for="RememberMe" class="text-danger"></span>
 
     </div>
 
