--- a/IsTakip.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>İŞ TAKİP SİSTEMİ</title>
+    <title>İŞ TAKİP | ADMİN</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/lib/bootswatch/bootstrap.min.css" rel="stylesheet" />
