--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="list-group list-group-flush">
      
-        <a asp-action="Index" asp-controller="IsEmri" asp-route-id="@Model.Id" 
+        <a asp-action="Index" asp-controller="IsEmri"
             class="list-group-item list-group-item-action @(active=="isemri"?"active":"")">
             <i class="fas fa-envelope-open-text mr-2"></i>
             Gelen İş Emirleri
