--- a/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
@@ -9,10 +9,13 @@
 {
     index++;
     <div class="card m-3">
+
         <div class="card-header">
             @gorev.Ad
         </div>
+
         <div class="card-body">
+
             <h5 class="card-title">
                 <span class="text-danger">@gorev.Aciliyet.Tanim</span>
             </h5>
@@ -20,6 +23,7 @@
             <p class="card-text">@gorev.Aciklama</p>
 
             <p class="text-right">
+
                 @if (gorev.Raporlar.Count > 0)
                 {
                     <a class="btn btn-light btn-sm" data-toggle="collapse" href="#collapseExample-@index"
@@ -30,34 +34,44 @@
                 }
                 else
                 {
-
                     <span class="lead font-weight-bold p-2 d-block" style="font-size:medium; font-family:'Times New Roman', Times, serif">
                         Hiç rapor yazmamışsınız, bize görevinizdeki ilerlemelerinizden bahsedin!
                     </span>
 
-                    <a href="#" class="btn btn-light btn-sm mx-1"> Rapor Yaz <i class="fas fa-pencil-alt"></i></a>
+                    <a asp-action="EkleRapor" asp-route-id="@gorev.Id"
+                    class="btn btn-light btn-sm mx-1"> Rapor Yaz <i class="fas fa-pencil-alt"></i>
+                    </a>
                 }
 
                 <a href="#" class="btn btn-outline-primary btn-sm">
                     Tamamlandı olarak işaretle
                 </a>
             </p>
+
             <div class="collapse" id="collapseExample-@index">
+
+                <a asp-action="EkleRapor" asp-route-id="@gorev.Id"
+                   class="btn btn-light btn-sm mx-1">
+                    Rapor Yaz <i class="fas fa-pencil-alt"></i>
+                </a>
+
                 <table class="table table-hover table-bordered table-sm">
                     <thead class="table table-striped table-active">
                         <tr>
                             <th scope="col">Tanım</th>
                             <th scope="col">Detay</th>
                             <th scope="col">İşlem</th>
-                    </tr>
+                        </tr>
                     </thead>
                     @foreach (var rapor in gorev.Raporlar)
                     {
                         <tr>
                             <td>@rapor.Tanim</td>
                             <td>@rapor.Detay</td>
-                            <td class="btn btn-warning btn-sm mr-2">
+                            <td>
+                                <a asp-action="GuncelleRapor" asp-route-id="@rapor.Id" class="btn btn-warning btn-sm mr-2">
                                 <i class="fas fa-pencil-alt mr-2"></i> Düzenle
+                                </a>
                             </td>
 
                         </tr>
