--- a/IsTakip.Web/Areas/Member/Views/Shared/_MemberLayout.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/Shared/_MemberLayout.cshtml
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>İŞ TAKİP | KULLANICI</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/lib/bootswatch/bootstrap.min.css" rel="stylesheet" />
