FrontEnd ve BackEnd Update

--- a/IsTakip.Web/Areas/Admin/Views/Aciliyet/EkleAciliyet.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Aciliyet/EkleAciliyet.cshtml
@@ -12,7 +12,7 @@
         <input asp-for="Tanim" type="text" class="form-control" />
     </div>
 
-    <button type="submit" class="btn btn-info btn-sm"> 
+    <button type="submit" class="btn btn-dark btn-sm"> 
         <i class="fas fa-thumbs-up mr-2"></i>Kaydet</button>
 
 </form>
