--- a/IsTakip.Web/Areas/Admin/Views/IsEmri/AtaPersonel.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/IsEmri/AtaPersonel.cshtml
@@ -31,7 +31,7 @@
                 <p class="card-text">
                     <strong> Aciliyet Durumu: </strong>
 
-                    <span class="badge badge-primary">@Model.Aciliyet.Tanim</span>
+                    <span class="badge badge-danger">@Model.Aciliyet.Tanim</span>
                 </p>
 
                 <p><small>@Model.OlusturulmaTarihi.ToString("D")</small></p>
