--- a/IsTakip.Web/Areas/Member/Views/IsEmri/EkleRapor.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/IsEmri/EkleRapor.cshtml
@@ -8,13 +8,18 @@
 
     <div class="text-center lead p-3">
 
-        <div class="card text-white bg-primary mb-3" style="">
-            <div class="card-header"><h4 class="text-white" style="text-decoration:underline;">Görevin Adı: </h4>@Model.Gorev.Ad</div>
+        <div class="card text-white bg-dark mb-3" style="">
+            <div class="card-header">
+                <h3 class="text-white text-left" style="text-decoration:underline;">Görevin Adı: </h3>
+                <h4 class="card-title text-left"> @Model.Gorev.Ad</h4>
+            </div>
 
             <div class="card-body">
-                <h4 class="card-title"><h3 class="text-white" style="text-decoration:underline;">
-                    Görevin Aciliyet Durumu: </h3>@Model.Gorev.Aciliyet.Tanim</h4>
-                <p class="card-text">@Model.Gorev.Aciklama</p>
+                <h3 class="text-white text-left" style="text-decoration:underline;"> Görevin Aciliyet Durumu: </h3>
+                <h4 class="card-title text-left"> @Model.Gorev.Aciliyet.Tanim</h4>
+                <br />
+                <h4 class="text-white text-left" style="text-decoration:underline;">Görevin Tanımı: </h4>
+                <h4 class="card-title text-left"> @Model.Gorev.Aciklama</h4>
             </div>
         </div>
 
@@ -32,8 +37,8 @@
         <input asp-for="Detay" class="form-control" />
     </div>
 
-    <a asp-action="Index" class="btn btn-warning btn-sm"> <i class="fas fa-backward"></i> Vazgeç</a>
-    <button type="submit" class="btn btn-info btn-sm">
+    <a asp-action="Index" class="btn btn-danger btn-sm"> <i class="fas fa-backward"></i> Vazgeç</a>
+    <button type="submit" class="btn btn-primary btn-sm">
         <i class="fas fa-thumbs-up ml-2"></i> Kaydet
     </button>
 
