--- a/IsTakip.Web/Areas/Admin/Views/Aciliyet/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Aciliyet/Index.cshtml
@@ -8,7 +8,7 @@
 @if (Model.Count != 0)
 {
     <a asp-action="EkleAciliyet" asp-controller="Aciliyet"
-       class="btn btn-sm btn-info my-2">
+       class="btn btn-sm btn-dark my-2">
         <i class="fas fa-plus mr-2"></i> Yeni Aciliyet
     </a>
     <table class="table table-sm table-hover table-bordered mt-2">
