--- a/IsTakip.Web/Areas/Admin/Views/Gorev/EkleGorev.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Gorev/EkleGorev.cshtml
@@ -25,7 +25,7 @@
         </select>
     </div>
 
-    <button type="submit" class="btn btn-info btn-sm">
+    <button type="submit" class="btn btn-dark btn-sm">
         <i class="fas fa-thumbs-up mr-2"></i> Kaydet
     </button>
 
