--- a/IsTakip.Web/Areas/Admin/Views/Gorev/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Gorev/Index.cshtml
@@ -7,7 +7,7 @@
 
 @if (Model.Count != 0)
 {
-    <a asp-action="EkleGorev"  class="btn btn-sm btn-info my-2">
+    <a asp-action="EkleGorev"  class="btn btn-sm btn-dark my-2">
         <i class="fas fa-plus-circle mr-2"></i> Yeni Görev
     </a>
 
