--- a/IsTakip.Web/Areas/Admin/Views/IsEmri/GorevlendirPersonel.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/IsEmri/GorevlendirPersonel.cshtml
@@ -16,12 +16,12 @@
                 </p>
 
                 <div class="form-group text-center">
-                    <a asp-action="AtaPersonel" asp-route-id="@Model.Gorev.Id" class="btn btn-warning">Hayır, vazgeç</a>
+                    <a asp-action="AtaPersonel" asp-route-id="@Model.Gorev.Id" class="btn btn-danger">Hayır, vazgeç</a>
 
                     <input type="hidden" name="PersonelId" value="@Model.AppUser.Id" />
                     <input type="hidden" name="GorevId" value="@Model.Gorev.Id" />
 
-                    <button type="submit" class="btn btn-primary">Evet, görevlendir</button>
+                    <button type="submit" class="btn btn-dark">Evet, görevlendir</button>
                 </div>
 
             </blockquote>
@@ -44,7 +44,7 @@
                         <p class="card-text">
                             <strong> Aciliyet Durumu: </strong>
 
-                            <span class="badge badge-primary">@Model.Gorev.Aciliyet.Tanim</span>
+                            <span class="badge badge-danger">@Model.Gorev.Aciliyet.Tanim</span>
                         </p>
 
                     </div>
