--- a/IsTakip.Web/Areas/Admin/Views/Profil/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Profil/Index.cshtml
@@ -57,7 +57,7 @@
 
     <div class="form-group">
 
-        <button type="submit" class=" btn btn-info btn-sm mt-2">
+        <button type="submit" class=" btn btn-dark btn-sm mt-2">
             <i class="fas fa-thumbs-up mr-2"></i>
             Kaydet
         </button>
