--- a/IsTakip.Web/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
 
     <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
 
-    <a asp-action="KayitOl" class="btn btn-warning btn-sm">Kayıt Ol</a>
-    <input type="submit" class="btn btn-info btn-sm" value="Giriş Yap" />
+    <a asp-action="KayitOl" class="btn btn-outline-primary btn-sm my-3 mr-2">Kayıt Ol</a>
+    <input type="submit" class="btn btn-primary btn-sm" value="Giriş Yap" />
 
 </form>
