--- a/IsTakip.Web/Views/Home/KayitOl.cshtml
+++ b/IsTakip.Web/Views/Home/KayitOl.cshtml
@@ -45,9 +45,9 @@
   
     <div asp-validation-summary="ModelOnly" class="text-danger"> </div>
 
-    <a asp-action="Index" class="btn btn-warning btn-sm">
+    <a asp-action="Index" class="btn btn-outline-primary btn-sm">
         <i class="fas fa-hand-point-left mr-2"></i> Vazgeç</a>
-    <button type="submit" class="btn btn-info btn-sm">
+    <button type="submit" class="btn btn-primary btn-sm">
         <i class="fas fa-thumbs-up mr-2"></i> Kaydet
     </button>
 
