Rapor Ekleme ve Guncelleme Kısımları Tamamlandı.

--- a/IsTakip.Web/Areas/Member/Views/IsEmri/GuncelleRapor.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/IsEmri/GuncelleRapor.cshtml
@@ -1,11 +1,11 @@
-﻿@model RaporAddViewModel
+﻿@model RaporUpdateViewModel
 @{
-    ViewData["Title"] = "EkleRapor";
+    ViewData["Title"] = "GuncelleRapor";
     Layout = "~/Areas/Member/Views/Shared/_MemberLayout.cshtml";
 }
 
-<form asp-action="EkleRapor" asp-controller="IsEmri" method="post" class="w-75 mx-auto p-3">
 
+<form asp-action="GuncelleRapor" asp-controller="IsEmri" method="post" class="w-75 mx-auto p-3">
     <div class="text-center lead p-3">
 
         <div class="card text-white bg-dark mb-3" style="">
@@ -51,3 +51,4 @@
     <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
+
