--- a/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
@@ -39,11 +39,12 @@
                     </span>
 
                     <a asp-action="EkleRapor" asp-route-id="@gorev.Id"
-                    class="btn btn-primary btn-sm mx-1"> Rapor Yaz <i class="fas fa-pencil-alt"></i>
+                       class="btn btn-primary btn-sm mx-1">
+                        Rapor Yaz <i class="fas fa-pencil-alt"></i>
                     </a>
                 }
 
-                <a href="#" class="btn btn-outline-primary btn-sm">
+                <a href="#" class="btn btn-outline-primary btn-sm" data-toggle="modal" data-target="#exampleModal" data-id="@gorev.Id">
                     Tamamlandı olarak işaretle
                 </a>
             </p>
@@ -70,7 +71,7 @@
                             <td>@rapor.Detay</td>
                             <td>
                                 <a asp-action="GuncelleRapor" asp-route-id="@rapor.Id" class="btn btn-danger btn-sm mr-2">
-                                <i class="fas fa-pencil-alt mr-2"></i> Düzenle
+                                    <i class="fas fa-pencil-alt mr-2"></i> Düzenle
                                 </a>
                             </td>
 
@@ -79,8 +80,58 @@
                 </table>
             </div>
 
-
         </div>
     </div>
 }
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">UYARI</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Bu işlemi gerçekleştirmek istediğinizden emin misiniz?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Vazgeç</button>
+                <button type="button" id="btnKaydet" class="btn btn-primary">Evet</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section JavaScript{
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $("#exampleModal").on("show.bs.modal", function (event) {
+                let tetikleyenElement = $(event.relatedTarget);
+                let data = tetikleyenElement.data("id");
+                $("#btnKaydet").click(function () {
+                    //$('.toast').toast(option)
+                    $.ajax({
+                        type: "GET",
+                        contentType: "application/json; charset = utf-8",
+                        url: "./IsEmri/TamamlaGorev",
+                        data: { gorevId: data },
+                        success: function () {
+                            toastr.error("İşlem başarıyla gerçekleşti.", "BAŞARILI");
+                        },
+                        error: function (error) {
+                            toastr.error("HATA", "İşlem Başarısız");
+                        }
+                    })
+                })
+
+             });
+        });
+   
+    </script>
+}
+
+
 
