--- a/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/IsEmri/Index.cshtml
@@ -29,7 +29,7 @@
                     <a class="btn btn-dark btn-sm" data-toggle="collapse" href="#collapseExample-@index"
                        role="button" aria-expanded="false" aria-controls="collapseExample">
                         Raporlara Git <i class="fas fa-caret-down mx-1"></i>
-                        <span class="badge badge-primary">@gorev.Raporlar.Count</span>
+                        <span class="badge badge-primary p-1" style="font-size:12px;">@gorev.Raporlar.Count</span>
                     </a>
                 }
                 else
@@ -39,12 +39,12 @@
                     </span>
 
                     <a asp-action="EkleRapor" asp-route-id="@gorev.Id"
-                       class="btn btn-primary btn-sm mx-1">
+                       class="btn btn-primary btn-sm mx-1" style="font-size:11px;">
                         Rapor Yaz <i class="fas fa-pencil-alt"></i>
                     </a>
                 }
 
-                <a href="#" class="btn btn-outline-primary btn-sm" data-toggle="modal" data-target="#exampleModal" data-id="@gorev.Id">
+                <a asp-action="Index" class="btn btn-outline-primary btn-sm" data-toggle="modal" data-target="#exampleModal" data-id="@gorev.Id">
                     Tamamlandı olarak işaretle
                 </a>
             </p>
@@ -52,7 +52,7 @@
             <div class="collapse" id="collapseExample-@index">
 
                 <a asp-action="EkleRapor" asp-route-id="@gorev.Id"
-                   class="btn btn-primary btn-sm mx-1 my-2">
+                   class="btn btn-primary btn-sm mx-1 my-2" style="font-size:11px;">
                     Rapor Yaz <i class="fas fa-pencil-alt"></i>
                 </a>
 
@@ -126,9 +126,9 @@
                     })
                 })
 
-             });
+            });
         });
-   
+
     </script>
 }
 
