--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
@@ -24,7 +24,7 @@
             <i class="fas fa-envelope-open-text mr-2"></i>
             Gelen İş Emirleri
         </a>
-        <a href="" class="list-group-item list-group-item-action ">
+        <a asp-action="Index" asp-controller="Gorev" class="list-group-item list-group-item-action @(active=="gorev"?"active":"") ">
             <i class="fas fa-clipboard-check mr-2"></i>
              Tamamladığım İşler
         </a>
