--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
@@ -13,7 +13,7 @@
 
 <div class="border border-right " id="sidebar-wrapper">
     <div class="sidebar-heading">
-       
+
         <img src="~/img/@Model.Picture" alt="@Model.Name" style="height:10rem!important;" class="w-auto img-thumbnail" />
 
     </div>
@@ -38,6 +38,11 @@
 
         <a href="#" class="list-group-item list-group-item-action ">
             <i class="far fa-bell mr-2"></i>
+            @if (ViewBag.BildirimSayisi > 0)
+            {
+            <sub class="badge badge-info badge-pill position-absolute" style="bottom:0.625rem!important; left:1.7rem!important; font-size:8px;">
+            <small>@ViewBag.BildirimSayisi</small></sub>
+            }
             Bildirimler
         </a>
 
