Admin Controller Region işlemi

--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
@@ -24,7 +24,7 @@
             Aciliyet İşlemleri
         </a>
         <a asp-action="Index" asp-controller="IsEmri" class="list-group-item list-group-item-action  @(active=="isemri"?"active":"")">
-            <i class="far fa-file mr-2"></i>
+            <i class="far fa-file mr-2 ml-0"></i>
             İş Emirleri
         </a>
         <a href="#" class="list-group-item list-group-item-action">
@@ -36,7 +36,7 @@
             İstatistikler
         </a>
 
-        <a asp-action="Index" asp-controller="Bildirim" class="list-group-item list-group-item-action @(active=="isemri"?"bildirim":"") ">
+        <a asp-action="Index" asp-controller="Bildirim" class="list-group-item list-group-item-action @(active=="bildirim"?"active":"") ">
             <i class="far fa-bell mr-2"></i>
             @if (ViewBag.BildirimSayisi > 0)
             {
