Bildirim Gönderme İşlemleri / Admin
- Kullanıcıya

--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
@@ -29,7 +29,7 @@
             Tamamladığım İşler
         </a>
 
-        <a href="#" class="list-group-item list-group-item-action ">
+        <a href="#" class="list-group-item list-group-item-action @(active=="bildirim"?"active":"") ">
             <i class="far fa-bell mr-2"></i>
             @if (ViewBag.BildirimSayisi > 0)
             {
