--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
@@ -17,7 +17,14 @@
         <img src="~/img/@Model.Picture" alt="@Model.Name" style="height:10rem!important;" class="w-auto img-thumbnail" />
 
     </div>
-    <div class="list-group list-group-flush mt-4">
+
+    <div class="list-group list-group-flush">
+
+        <a asp-action="Index" asp-controller="Home"
+           class="list-group-item list-group-item-action @(active=="anasayfa"?"anasayfa":"")">
+            <i class="fas fa-home mr-2"></i>
+            Ana Sayfa
+        </a>
         <a asp-action="Index" asp-controller="Gorev" class="list-group-item list-group-item-action @(active=="gorev"?"active":"")"><i class="fas fa-tasks mr-2"></i> Görev İşlemleri</a>
         <a asp-action="Index" asp-controller="Aciliyet" class="list-group-item list-group-item-action  @(active=="aciliyet"?"active":"")">
             <i class="fas fa-exclamation mr-2"></i>
@@ -40,8 +47,9 @@
             <i class="far fa-bell mr-2"></i>
             @if (ViewBag.BildirimSayisi > 0)
             {
-            <sub class="badge badge-info badge-pill position-absolute" style="bottom:0.625rem!important; left:1.7rem!important; font-size:8px;">
-            <small>@ViewBag.BildirimSayisi</small></sub>
+                <sub class="badge badge-info badge-pill position-absolute" style="bottom:0.625rem!important; left:1.7rem!important; font-size:8px;">
+                    <small>@ViewBag.BildirimSayisi</small>
+                </sub>
             }
             Bildirimler
         </a>
