--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Member.cshtml
@@ -19,17 +19,24 @@
     </div>
     <div class="list-group list-group-flush">
 
+        <a asp-action="Index" asp-controller="Home"
+           class="list-group-item list-group-item-action @(active=="anasayfa"?"anasayfa":"")">
+            <i class="fas fa-home mr-2"></i>
+            Ana Sayfa
+        </a>
+
         <a asp-action="Index" asp-controller="IsEmri"
            class="list-group-item list-group-item-action @(active=="isemri"?"active":"")">
             <i class="fas fa-envelope-open-text mr-2"></i>
             Gelen İş Emirleri
         </a>
+
         <a asp-action="Index" asp-controller="Gorev" class="list-group-item list-group-item-action @(active=="gorev"?"active":"") ">
             <i class="fas fa-clipboard-check mr-2"></i>
             Tamamladığım İşler
         </a>
 
-        <a href="#" class="list-group-item list-group-item-action @(active=="bildirim"?"active":"") ">
+        <a asp-action="Index" asp-controller="Bildirim" class="list-group-item list-group-item-action @(active=="bildirim"?"active":"") ">
             <i class="far fa-bell mr-2"></i>
             @if (ViewBag.BildirimSayisi > 0)
             {
