Kullanıcının Yazmış Olduğu Rapor Sayısının Getirilmesi

--- a/IsTakip.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -5,3 +5,10 @@
 }
 
 
+@*<div class="card text-white bg-dark mb-3 my-3" style="max-width: 20rem;">
+    <div class="card-header">Yazmış olduğunuz</div>
+    <div class="card-body">
+        <h4 class="card-title font-weight-bold text-center">RAPOR SAYISI</h4>
+        <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.RaporSayisi</p>
+    </div>
+</div>*@
