--- a/IsTakip.Web/Areas/Member/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                 }
                 else
                 {
-                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">Henüz hiçbir görevi tamamlamamışsınız.</p>
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Henüz hiçbir görevi tamamlamamışsınız.</p>
                 }
             </div>
 
@@ -45,7 +45,7 @@
                 }
                 else
                 {
-                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">Herhangi bir iş emriniz bulunmamaktadır.</p>
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Herhangi bir iş emriniz bulunmamaktadır.</p>
                 }
             </div>
 
@@ -60,7 +60,7 @@
                 <h4 class="card-title font-weight-bold text-center">RAPOR SAYISI</h4>
                 @if (ViewBag.RaporSayisi > 0)
                 {
-                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.RaporSayisi</p>
+                    <p class="card-text font-weight-bold text-center " style="font-size:20px;">@ViewBag.RaporSayisi</p>
                     <p class=" text-right" style="font-size:12px;">
                         İncelemek için <a asp-action="Index" asp-controller="IsEmri"
                                           class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
@@ -68,7 +68,7 @@
                 }
                 else
                 {
-                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">Herhangi bir rapor yazmamışsınız.</p>
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Herhangi bir rapor yazmamışsınız.</p>
                 }
             </div>
 
@@ -93,7 +93,7 @@
                 }
                 else
                 {
-                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">Hepsini okudunuz.</p>
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Hepsini okudunuz.</p>
                 }
             </div>
 
