--- a/IsTakip.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -4,11 +4,101 @@
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
+<div class="row">
 
-@*<div class="card text-white bg-dark mb-3 my-3" style="max-width: 20rem;">
-    <div class="card-header">Yazmış olduğunuz</div>
-    <div class="card-body">
-        <h4 class="card-title font-weight-bold text-center">RAPOR SAYISI</h4>
-        <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.RaporSayisi</p>
+    <div class="col-md-6">
+
+        <div class="card text-white bg-dark mb-3 my-3">
+            <div class="card-header">Atanmayı bekleyen</div>
+            <div class="card-body">
+                <h4 class="card-title font-weight-bold text-center">GÖREV SAYISI</h4>
+                @if (ViewBag.AtanmayiBekleyenGorevSayisi > 0)
+                {
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag..AtanmayiBekleyenGorevSayisi</p>
+                    @*<p class="text-right " style="font-size:12px;">
+                        İncelemek için <a asp-action="Index" asp-controller="Gorev"
+                                          class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>*@
+                }
+                else
+                {
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Hali hazırda atanmayı bekleyen bir görev bulunmamakta.</p>
+                }
+            </div>
+
+        </div>
     </div>
-</div>*@
+
+    <div class="col-md-6">
+
+        <div class="card text-white bg-dark mb-3 my-3">
+            <div class="card-header">Tamamlamamış olduğunuz</div>
+            <div class="card-body">
+                <h4 class="card-title font-weight-bold text-center">GÖREV SAYISI</h4>
+                @if (ViewBag.TamamlanmasiGerekenGorevSayisi > 0)
+                {
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.TamamlanmasiGerekenGorevSayisi</p>
+                    <p class="text-right " style="font-size:12px;">
+                        Tamamlamak için <a asp-action="Index" asp-controller="IsEmri"
+                                           class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>
+                }
+                else
+                {
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Herhangi bir iş emriniz bulunmamaktadır.</p>
+                }
+            </div>
+
+        </div>
+    </div>
+
+    <div class="col-md-6">
+
+        <div class="card text-white bg-dark mb-3 my-3">
+            <div class="card-header">Yazmış olduğunuz</div>
+            <div class="card-body">
+                <h4 class="card-title font-weight-bold text-center">RAPOR SAYISI</h4>
+                @if (ViewBag.RaporSayisi > 0)
+                {
+                    <p class="card-text font-weight-bold text-center " style="font-size:20px;">@ViewBag.RaporSayisi</p>
+                    <p class=" text-right" style="font-size:12px;">
+                        İncelemek için <a asp-action="Index" asp-controller="IsEmri"
+                                          class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>
+                }
+                else
+                {
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Herhangi bir rapor yazmamışsınız.</p>
+                }
+            </div>
+
+
+        </div>
+
+    </div>
+
+    <div class="col-md-6">
+
+        <div class="card text-white bg-dark mb-3 my-3">
+            <div class="card-header">Henüz okumadığınız</div>
+            <div class="card-body">
+                <h4 class="card-title font-weight-bold text-center">BİLDİRİMLER</h4>
+                @if (ViewBag.OkunmamisBildirimSayisi > 0)
+                {
+                    <p class="card-text font-weight-bold text-center" style="font-size:20px;">@ViewBag.OkunmamisBildirimSayisi</p>
+                    <p class="text-right " style="font-size:12px;">
+                        Okumak için <a asp-action="Index" asp-controller="Bildirim"
+                                       class="text-white font-italic font-weight-bold" style="text-decoration:underline"> Tıklayınız </a>
+                    </p>
+                }
+                else
+                {
+                    <p class="card-text font-weight-bold text-center p-4" style="font-size:12px;">Hepsini okudunuz.</p>
+                }
+            </div>
+
+
+        </div>
+    </div>
+
+</div>
