Veri eklendi ve Google Charts İşlemleri yapılıyor

--- a/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
+++ b/IsTakip.Web/Views/Shared/Components/Wrapper/Default.cshtml
@@ -37,7 +37,7 @@
             İş Emirleri
         </a>
 
-        <a href="#" class="list-group-item list-group-item-action">
+        <a asp-action="Index" asp-controller="Grafik" class="list-group-item list-group-item-action @(active=="grafik"?"active":"")">
             <i class="fas fa-chart-pie mr-2"></i>
             Grafikler
         </a>
