İstatistikleri Getiren Metodların Yazılması

--- a/IsTakip.Web/Areas/Admin/Views/Grafik/Index.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Grafik/Index.cshtml
@@ -15,6 +15,7 @@
         google.charts.setOnLoadCallback(drawChart);
 
         function drawChart() {
+            var array = [];
 
             var data = google.visualization.arrayToDataTable([
                 ['Task', 'Hours per Day'],
