Admin Area Mapping İşlemleri

--- a/IsTakip.Web/Areas/Admin/Views/Aciliyet/EkleAciliyet.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Aciliyet/EkleAciliyet.cshtml
@@ -1,4 +1,5 @@
-﻿@model AciliyetAddViewModel
+﻿@model AciliyetAddDto
+
 @{
     ViewData["Title"] = "EkleAciliyet";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -7,7 +8,7 @@
 <form class="w-75 mx-auto p-3" method="post">
 
     <div class="form-group">
-        <label asp-for="Tanim"></label>
+        <label asp-for="Tanim">Tanım :</label>
         <span asp-validation-for="Tanim" class="text-danger"></span>
         <input asp-for="Tanim" type="text" class="form-control" />
     </div>
