--- a/IsTakip.Web/Areas/Admin/Views/Aciliyet/GuncelleAciliyet.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Aciliyet/GuncelleAciliyet.cshtml
@@ -1,4 +1,4 @@
-﻿@model AciliyetUpdateViewModel
+﻿@model AciliyetUpdateDto
 @{
     ViewData["Title"] = "GuncelleAciliyet";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -10,7 +10,7 @@
 
     <div class="form-group">
 
-        <label asp-for="Tanim"></label>
+        <label asp-for="Tanim">Tanım :</label>
         <span asp-validation-for="Tanim" class="text-danger"></span>
         <input asp-for="Tanim" type="text" class="form-control" />
 
