--- a/IsTakip.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper IsTakip.Web.TagHalpers.*,IsTakip.Web
 @using IsTakip.Web.Areas.Admin.Models
+@using IsTakip.DTO.DTOs.AciliyetDTOs
+@using IsTakip.DTO.DTOs.BildirimDtos
+@using IsTakip.DTO.DTOs.GorevDtos
+@using IsTakip.DTO.DTOs.AppUserDtos
