--- a/IsTakip.Web/Areas/Admin/Views/Gorev/EkleGorev.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Gorev/EkleGorev.cshtml
@@ -1,4 +1,4 @@
-﻿@model GorevAddViewModel
+﻿@model GorevAddDto
 @{
     ViewData["Title"] = "EkleGorev";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -12,7 +12,7 @@
         <input asp-for="Ad" type="text" class="form-control" />
     </div>
     <div class="form-group ">
-        <label asp-for="Aciklama"></label>
+        <label>Açıklama</label>
         <span asp-validation-for="Aciklama" class="text-danger"></span>
         <input asp-for="Aciklama" class="form-control" />
     </div>
