--- a/IsTakip.Web/Areas/Admin/Views/Gorev/GuncelleGorev.cshtml
+++ b/IsTakip.Web/Areas/Admin/Views/Gorev/GuncelleGorev.cshtml
@@ -1,4 +1,4 @@
-﻿@model GorevUpdateViewModel
+﻿@model GorevUpdateDto
 @{
     ViewData["Title"] = "EkleGorev";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
@@ -13,7 +13,7 @@
         <input asp-for="Ad" type="text" class="form-control" />
     </div>
     <div class="form-group ">
-        <label asp-for="@Model.Aciklama"></label>
+        <label>Açıklama</label>
         <span asp-validation-for="@Model.Aciklama" class="text-danger"></span>
         <input asp-for="Aciklama" class="form-control" />
     </div>
