Kullanıcı kısmının map refactor işlemleri devam ediyor...

--- a/IsTakip.Web/Areas/Member/Views/Bildirim/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/Bildirim/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<BildirimListViewModel>
+﻿@model List<BildirimListDto>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Member/Views/Shared/_MemberLayout.cshtml";
