--- a/IsTakip.Web/Areas/Member/Views/_ViewImports.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
 ﻿@addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
 @using IsTakip.Web.Areas.Admin.Models
+@using IsTakip.DTO.DTOs.BildirimDtos
+@using IsTakip.DTO.DTOs.GorevDtos
