--- a/IsTakip.Web/Areas/Member/Views/_ViewImports.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using IsTakip.Web.Areas.Admin.Models
 @using IsTakip.DTO.DTOs.BildirimDtos
 @using IsTakip.DTO.DTOs.GorevDtos
+@using IsTakip.DTO.DTOs.RaporDtos
