--- a/IsTakip.Web/Areas/Member/Views/Profil/Index.cshtml
+++ b/IsTakip.Web/Areas/Member/Views/Profil/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model AppUserListViewModel
+﻿@model AppUserListDto
 
 @{
     ViewData["Title"] = "Index";
@@ -19,12 +19,12 @@
 <form asp-action="Index" method="post" class="w-75 mx-auto p-3" enctype="multipart/form-data">
     <input type="hidden" asp-for="@Model.Id" />
     <div class="form-group">
-        <label asp-for="@Model.Name"></label>
+        <label asp-for="@Model.Name">Adınız :</label>
         <span asp-validation-for="@Model.Name" class="text-danger"></span>
         <input asp-for="@Model.Name" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="@Model.SurName"></label>
+        <label asp-for="@Model.SurName">Soyadınız :</label>
         <span asp-validation-for="@Model.SurName" class="text-danger"></span>
         <input asp-for="@Model.SurName" class="form-control" />
     </div>
